<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#ede980"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_student_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/list_of_students"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="16dp"
        tools:ignore="MissingConstraints" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border">

        <TableRow
            android:id="@+id/tableRow1"
            android:background="@drawable/table_row_border" >

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/student_1"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:text="@string/name_noah_sebastian"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_number_11234"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/program_it"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/table_border">

        <TableRow
            android:background="@drawable/table_row_border" >

            <ImageView
                android:id="@+id/image_view2"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/student_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:text="@string/name_oliver_sykes"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/id_number_12345"/>

                <TextView
                    android:id="@+id/text_view7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="Program: BSIT" />

            </LinearLayout>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/table_border">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_row_border">

            <ImageView
                android:id="@+id/image_view8"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/student_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:text="Name: Chris Thomas Cerulli"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Id Number: 13345"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Program: BSIT"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </TableRow>
    </TableLayout>


</LinearLayout>